--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,16 @@
-spring.datasource.url=${POSTGRE_URL:jdbc:postgresql://localhost:5432/postgres}
+spring.datasource.url=${POSTGRE_URL:jdbc:postgresql://host.docker.internal:5432/postgres}
 spring.datasource.username=${POSTGRE_URL_USERNAME:postgres}
 spring.datasource.password=${POSTGRE_URL_PASSWORD:postgres}
+spring.datasource.hikari.allow-pool-suspension=true
+spring.datasource.driver-class-name=org.postgresql.Driver
 
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=false
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=none
+spring.sql.init.mode=never
 
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
+spring.flyway.enabled=true
 
-spring.main.allow-bean-definition-overriding=true
+spring.cloud.refresh.extra-refreshable=com.zaxxer.hikari.HikariDataSource
+
+#spring.main.allow-bean-definition-overriding=true
